# melon

./: .clang-format  .flatpak-manifest.json  .kde-ci.yml  CMakeLists.txt  Delfenoj.qbs  Messages.sh
.reuse/: dep5
application data/: ApplicationData.qbs  CMakeLists.txt  org.kde.Delfenoj.desktop  org.kde.Melon.desktop
data/: AboutDialog.qml  AbstractFileView.qml  BaseDelegate.qml  BlockMouseArea.qml  ColumnsFileView.qml  DelfenojMenuBar.qml  DropIndicator.qml  FileIcon.qml  FileItemColumn.qml  IconsFileView.qml  ListItemBackground.qml  Page.qml  PageToolBar.qml  PathBar.qml  PhotosFileView.qml  PlacesSidebar.qml  QuickWidgetWrapper.qml  SelectableLabel.qml  SingleColumn.qml  SmallIconButton.qml  SpatialIconsFileView.qml  TableFileView.qml  ToolBarEditorBackground.qml  Window.qml  WindowTabBar.qml  WindowTabButton.qml  WindowToolBar.qml  app.qrc
data/toolbar/: CreateNew.qml  ExpandingSpace.qml  GoBack.qml  GoForward.qml  GoUp.qml  NewWindow.qml  Search.qml
po/ar/: org.kde.melon.po
po/ca/: org.kde.melon.po
po/ca@valencia/: org.kde.melon.po
po/cs/: org.kde.melon.po
po/de/: org.kde.melon.po
po/en_GB/: org.kde.melon.po
po/eo/: org.kde.melon.po
po/es/: org.kde.melon.po
po/eu/: org.kde.melon.po
po/fi/: org.kde.melon.po
po/fr/: org.kde.melon.po
po/ga/: org.kde.melon.po
src/: App.qbs  CMakeLists.txt  app.cpp  app.h  beacons.cpp  beacons.h  closesignalwindow.cpp  closesignalwindow.h  columnsmodel.cpp  columnsmodel.h  columnsmodel_p.h  dbus.cpp  dbus.h  dirmodel.cpp  dirmodel.h  document.cpp  document.h  dragthing.cpp  dragthing.h  flagexample.cpp  flagexample.h  folderclassifier.cpp  folderclassifier.h  foreigns.h  main.cpp  menubar.cpp  menubar.h  model_wrapper.cpp  model_wrapper.h  placesdelegate.cpp  placesdelegate.h  previewer.cpp  previewer.h  reverser.cpp  reverser.h  rubberband.cpp  rubberband.h  toolbar.cpp  toolbar.h  toolbardelegate.cpp  (+7 more)
src/boxbox/: BoxBoxObjectModel.h
src/nglib/: NGAppMain.cpp  NGAppMain.h  NGApplication.h  NGLib.h  NGPrivateConstants_p.h  NGRestorer.h  NGSavable.h  NGSelfSavable.h
src/plugins/: Plugin.h  PluginLoader.mm
(+34 files in other folders)
